--- a/index.html
+++ b/index.html
@@ -4,37 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Listening to Nodes</title>
-  <style>
-   div {
-     border: 1px solid red;
-     padding: 6px;
-     min-height: 12px;
-   }
-  </style>
+  <title>Introduction to the DOM Lab</title>
 </head>
 <body>
-  <main id="main">My ID is "main"!</main>
-  <br />
-  <div>
-      <input id="button" type="button" value="Click Me!"/>
-  </div>
-  <br />
-  <div>
-    1
-    <div>
-      2
-      <div>
-        3
-        <div>
-          4
-          <div>
-            5
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script type="text/javascript" src="index.js"></script>
+  <!--All our work for this lesson will go here-->
+  <h1>My HTML adventure</h1>
+  <p>
+    We're writing HTML markup to display in our <strong>browser</strong>.
+    We're basically telling computers what to do. <em>Neat!</em>
+    We're writing <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to display in our <strong>browser</strong>.
+  </p>
+  <table>
+    <thead>
+      <tr>
+        <th>Element name</th>
+        <th>Display value</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>h1</td>
+        <td>block</td>
+      </tr>
+      <tr>
+        <td>p</td>
+        <td>block</td>
+      </tr>
+      <tr>
+        <td>strong</td>
+        <td>inline</td>
+      </tr>
+      <tr>
+        <td>em</td>
+        <td>inline</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
